Fixed the alignment of name email in the account tab. Added app.js with the tasks details state.

--- a/public/css/hivesuggested.css
+++ b/public/css/hivesuggested.css
@@ -141,13 +141,13 @@ margin-top: -21px;
 
 /* Tasks Details */
 
-.endorsed {
+.task-detail-endorsed {
      float: left;
     display: inline;
     font-size: 15px; 
 }
 
-.delete {
+.task-acccount-delete {
      float: right;
     display: inline;
     font-size: 17px; 
